# InfoViews

./: CMakeLists.txt  DebugLog.cs  InfoViews.cs  README.md  loader.cs
CustomAI/: InfoViewsBuilding.cs
Patches/: CommonBuildingAIGetColorPatch.cs
Properties/: AssemblyInfo.cs
Resources/: en.txt
UI/: BuildingButton.cs
Util/: HarmonyDetours.cs  SpriteUtilities.cs
